# mle-training

./: .gitignore  Dockerfile  README.md  env.yml  nonstandardcode.py  setup.cfg  setup.py
deploy/conda/: linux_cpu_py39.yml
docs/source/: conf.py  index.rst
src/housing_price/: ingest_data.py  score.py  train.py
tests/unit_tests/: ingest_data_test.py  score_test.py  train_test.py
